# peony

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake.yml
cmake/: InstallGoogleTest.cmake
pstd/: CMakeLists.txt  start.c
src/: ast.c  ast.cxx  ast.h  ast.hxx  bump_allocator.h  codegen_llvm.c  codegen_llvm.cxx  codegen_llvm.h  codegen_llvm.hxx  context.cxx  context.hxx  identifier_table.c  identifier_table.cxx  identifier_table.h  identifier_table.hxx  identifier_table_test.cxx  lexer.c  lexer.cxx  lexer.h  lexer.hxx  lexer_re2c.c  lexer_re2c.cxx  lexer_re2c.re  lexer_test.cxx  literal_parser.c  literal_parser.cxx  literal_parser.h  literal_parser.hxx  literal_parser_test.cxx  main.c  main_test.cxx  name_mangling.c  name_mangling.cxx  name_mangling.h  name_mangling.hxx  name_mangling_test.cxx  operator_kinds.def  options.c  options.cxx  options.def  (+29 more)
src/ast/: ast.hxx  ast_decl.cxx  ast_decl.hxx  ast_expr.cxx  ast_expr.hxx  ast_printer.cxx  ast_printer.hxx  ast_stmt.cxx  ast_stmt.hxx  ast_visitor.hxx
src/driver/: cmdline_parser.c  cmdline_parser.cxx  main.c  main.cxx
src/interpreter/: interpreter.cxx  interpreter.hxx  interpreter_test.cxx  value.cxx  value.hxx
src/utils/: array_view.hxx  bump_allocator.c  bump_allocator.cxx  bump_allocator.h  bump_allocator.hxx  diag.c  diag.cxx  diag.h  diag.hxx  diag_formatter.c  diag_formatter.cxx  diag_formatter.h  diag_formatter.hxx  diag_formatter.re  diag_formatter_extra.c  diag_formatter_extra.cxx  diag_formatter_test.cxx  diag_kinds.def  dynamic_array.c  dynamic_array.h  dynamic_array_test.cxx  hash_table_common.c  hash_table_common.cxx  hash_table_common.h  hash_table_common.hxx  line_map.c  line_map.cxx  line_map.h  line_map.hxx  line_map_test.cxx  source_file.c  source_file.cxx  source_file.h  source_file.hxx  source_location.c  source_location.cxx  source_location.h  source_location.hxx  string.c  string.h  (+1 more)
test/: CMakeLists.txt  test_common.args  test_runner.py
test/driver/: diag_col_origin.0.stderr  diag_col_origin.1.stderr  diag_col_origin.2.stderr  diag_col_origin.p  diag_min_margin_width.0.stderr  diag_min_margin_width.1.stderr  diag_min_margin_width.2.stderr  diag_min_margin_width.p  diag_show_column.1.stderr  diag_show_column.p  diag_show_line_numbers.0.stderr  diag_show_line_numbers.1.stderr  diag_show_line_numbers.p  invalid_int_arg.0.stderr  invalid_int_arg.p  max_errors1.0.stderr  max_errors1.p  max_errors2.0.stderr  max_errors2.p  missing_arg.0.stderr  missing_arg.p  no_input_files.0.stderr  no_input_files.p  unknown_opt.0.stderr  unknown_opt.p
test/parser/: bin_expr.0.stderr  bin_expr.p  bool_literals.p  break_continue.0.stderr  break_continue.p  call_expr.0.stderr  call_expr.p  call_expr_args.p  empty.p  float_literals.0.stderr  float_literals.p  func_decl.0.stderr  func_decl.p  func_decl_eof1.0.stderr  func_decl_eof1.p  func_decl_eof2.0.stderr  func_decl_eof2.p  if_stmt.0.stderr  if_stmt.p  int_literals.0.stderr  int_literals.p  lazy_fn_body.p  raw_identifier.0.stderr  raw_identifier.p  test_common.args  trailling_comma_func_decl.p  while_stmt.0.stderr  while_stmt.p
test/positive/: CMakeLists.txt  assert_fail.peony  assert_success.peony  bool_operators.peony  break_in_loop.peony  continue_in_loop.peony  even_odd.peony  fib.peony  function_call.peony  i32_arithmetic.peony  if_else.peony  if_then.peony  lazy_and.peony  lazy_or.peony  mutable_variables.peony  return.peony  runtest.cmake  variables.peony  while_loop.peony
